# options-advisor

./: .envrc  .gitattributes  .gitignore  Dockerfile  README.md  Taskfile.yaml  api_assistant.py  api_garch.py  api_itm.py  api_quotes.py  api_vol.py  app.py  devenv.nix  experiment.ipynb  flask_app.py  html_report.py  io_utils.py  lambda.py  lambda_function.py  pyproject.toml
backend/: itm_api.py  vol_api.py
backend/volatility/: estimators.py
backend/volatility/models/: __init__.py  api.py  hodges_tompkins.py  rogers_satchell.py
infra/: .gitignore  Pulumi.yaml  __main__.py  cloudfront.py  lambda_helper.py  lambda_schedule.py  requirements.txt  route53.py  s3_helper.py  scheduler.py
pulumi/: Pulumi.yaml  __main__.py  index.html
pulumi/lambda/: main.py
research/: experiment.ipynb  garch.ipynb
static/: style.css
study/: experiment.ipynb
templates/: report.html
tests/: test_estimators.py  test_quotes_api.py
volatility/: estimators.py  legacy.py  lookup.py  report_console.py  report_html.py  volatility.ipynb  volest.py
volatility/models/: __init__.py  api.py  close_to_close.py  ewma.py  garman_klass.py  parkinson.py  rogers_satchell.py  yang_zhang.py
