[tool.poetry]
name = "options-advisor"
version = "0.1.0"
description = ""
authors = ["omdv <omdv@protonmail.com>"]
readme = "README.md"

[tool.poetry.group.main.dependencies]
python = "3.10.10"
pandas = "^2.2.2"
jinja2 = "^3.1.3"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
boto3 = "^1.34.101"
requests = "^2.31.0"
arch = "^7.0.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.0"
flask = "^3.0.3"
pulumi = "^3.115.2"
moto = "^5.0.6"
pulumi-random = "^4.16.1"
pulumi-aws = "^6.34.1"
statsmodels = "^0.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
