[project]
name = "options-advisor-aws-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "arch>=7.2.0",
  "boto3>=1.37.15",
  "jinja2>=3.1.6",
  "loguru>=0.7.3",
  "pandas>=2.2.3",
  "requests>=2.32.3",
  "seaborn>=0.13.2",
  "flask>=3.1.0",
  "jupyterlab>=4.3.6",
  "openai>=1.67.0",
]

[tool.pre-commit]
hooks = [
  { id = "pre-commit", entry = "pre-commit run --all-files" },
]

[tool.ruff]
# Linter settings
line-length = 88
target-version = "py312"
indent-width = 2

# Enable all rules by default, then configure specific rules
[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "I001",
]

# Formatter settings
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
  "jupyterlab>=4.3.6",
]
