[project]
name = "options-advisor-aws-site"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "arch>=7.2.0",
  "boto3>=1.37.15",
  "jinja2>=3.1.6",
  "loguru>=0.7.3",
  "pandas>=2.2.3",
  "requests>=2.32.3",
  "seaborn>=0.13.2",
  "openai>=1.67.0",
]

[tool.pre-commit]
hooks = [
  { id = "pre-commit", entry = "pre-commit run --all-files" },
]

[tool.ruff]
line-length = 88
target-version = "py312"
indent-width = 2

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "I001",
]

# Formatter settings
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
  "flask>=3.1.0",
  "jupyterlab>=4.3.6",
  "pulumi-aws>=6.73.0",
  "pulumi-docker>=4.6.2",
  "pulumi-random>=4.18.0",
  "pulumi>=3.157.0",
]
